Fixed bug where public tags on items would break the filter selection UI. This needs a test. I've added a comment to #634 regarding the need to test the folder UI with public tags, which would have detected this bug.
git-svn-id: http://svn.winnow.peerworks.org/trunk/winnow@2935 f9e11ea3-fe04-0410-b62f-af45e3a9b5a1

--- a/public/stylesheets/winnow.css
+++ b/public/stylesheets/winnow.css
@@ -582,21 +582,21 @@ a.editor_cancel {
   color: #666;
 }
 
-.item .closed .tags {
+.item .closed .item_tags {
   clear: both;
   display: block;
 }
 
-.item .closed .tags .add_tag {
+.item .closed .item_tags .add_tag {
   float: right;
   margin: 0 .5em;
 }
 
-.item .closed .tags .tag_list {
+.item .closed .item_tags .tag_list {
   height: 1.8em;
 }
 
-.item.selected .closed .tags .tag_list {
+.item.selected .closed .item_tags .tag_list {
   height: auto;
 }
 
